--- a/source/_scss/config/_navbar.scss
+++ b/source/_scss/config/_navbar.scss
@@ -4,7 +4,7 @@ $navbar-margin            : 0.8rem;
 // From which screens navbar should be visible
 $navbar-visible-screen    : $tablet;
 // Header size in navbar
-$navbar-header-size       : 1.5rem;
+$navbar-header-size       : 1.6rem;
 // Navbar header vertical padding
 $navbar-head-vertical-pad : 0.2rem;
 // Navbar header horizontal padding
