--- a/source/_scss/theme/layout/_default.scss
+++ b/source/_scss/theme/layout/_default.scss
@@ -1,8 +1,3 @@
-.page
-{
-    width: 100%;
-}
-
 .content
 {
     margin-bottom: 4rem;
