--- a/source/_scss/theme/layout/_post.scss
+++ b/source/_scss/theme/layout/_post.scss
@@ -24,7 +24,7 @@
     {
         width: 70%;
     }
-    h1
+    /*h1
     {
         font-size: $header-font-size - (0.2*1);
         margin: $header-font-size -(0.4*2) 0;
@@ -53,7 +53,8 @@
     {
         font-size: $header-font-size - (0.2*6);
         margin: $header-font-size -(0.4*7) 0;
-    }
+    }*/
+    @include heading($navbar-header-size, $navbar-header-size - 0.2);
 }
 
 .toc-menu
@@ -150,6 +151,7 @@
     text-align: left;
     margin-left: 0.25rem;
     display: inline-block;
+    font-size: $navbar-header-size;
 }
 .relatedPosts
 {
